@@ -460,28 +460,33 @@ JGRID_CHECKBOX_ROW_N="Checkbox for row %d"
 JHELP_COMPONENTS_BANNERS_BANNERS="Components_Banners_Banners"
 JHELP_COMPONENTS_BANNERS_BANNERS_EDIT="Components_Banners_Banners_Edit"
 JHELP_COMPONENTS_BANNERS_CATEGORIES="Components_Banners_Categories"
-JHELP_COMPONENTS_BANNERS_CATEGORIES_EDIT="Components_Banners_Categories_Edit"
+JHELP_COMPONENTS_BANNERS_CATEGORY_ADD="Components_Banners_Categories_Edit"
+JHELP_COMPONENTS_BANNERS_CATEGORY_EDIT="Components_Banners_Categories_Edit"
 JHELP_COMPONENTS_BANNERS_CLIENTS="Components_Banners_Clients"
 JHELP_COMPONENTS_BANNERS_CLIENTS_EDIT="Components_Banners_Clients_Edit"
 JHELP_COMPONENTS_BANNERS_TRACKS="Components_Banners_Tracks"
 JHELP_COMPONENTS_CONTACT_CATEGORIES="Components_Contacts_Categories"
-JHELP_COMPONENTS_CONTACT_CATEGORIES_EDIT="Components_Contacts_Categories_Edit"
+JHELP_COMPONENTS_CONTACT_CATEGORY_ADD="Components_Contacts_Categories_Edit"
+JHELP_COMPONENTS_CONTACT_CATEGORY_EDIT="Components_Contacts_Categories_Edit"
 JHELP_COMPONENTS_CONTACTS_CONTACTS="Components_Contacts_Contacts"
 JHELP_COMPONENTS_CONTACTS_CONTACTS_EDIT="Components_Contacts_Contacts_Edit"
 JHELP_COMPONENTS_CONTENT_CATEGORIES="Components_Content_Categories"
-JHELP_COMPONENTS_CONTENT_CATEGORIES_EDIT="Components_Content_Categories_Edit"
+JHELP_COMPONENTS_CONTENT_CATEGORY_ADD="Components_Content_Categories_Edit"
+JHELP_COMPONENTS_CONTENT_CATEGORY_EDIT="Components_Content_Categories_Edit"
 JHELP_COMPONENTS_MESSAGING_INBOX="Components_Messaging_Inbox"
 JHELP_COMPONENTS_MESSAGING_READ="Components_Messaging_Read"
 JHELP_COMPONENTS_MESSAGING_WRITE="Components_Messaging_Write"
 JHELP_COMPONENTS_NEWSFEEDS_CATEGORIES="Components_Newsfeeds_Categories"
-JHELP_COMPONENTS_NEWSFEEDS_CATEGORIES_EDIT="Components_Newsfeeds_Categories_Edit"
+JHELP_COMPONENTS_NEWSFEEDS_CATEGORY_ADD="Components_Newsfeeds_Categories_Edit"
+JHELP_COMPONENTS_NEWSFEEDS_CATEGORY_EDIT="Components_Newsfeeds_Categories_Edit"
 JHELP_COMPONENTS_NEWSFEEDS_FEEDS="Components_Newsfeeds_Feeds"
 JHELP_COMPONENTS_NEWSFEEDS_FEEDS_EDIT="Components_Newsfeeds_Feeds_Edit"
 JHELP_COMPONENTS_REDIRECT_MANAGER="Components_Redirect_Manager"
 JHELP_COMPONENTS_REDIRECT_MANAGER_EDIT="Components_Redirect_Manager_Edit"
 JHELP_COMPONENTS_SEARCH="Components_Search"
 JHELP_COMPONENTS_WEBLINKS_CATEGORIES="Components_Weblinks_Categories"
-JHELP_COMPONENTS_WEBLINKS_CATEGORIES_EDIT="Components_Weblinks_Categories_Edit"
+JHELP_COMPONENTS_WEBLINKS_CATEGORY_ADD="Components_Weblinks_Categories_Edit"
+JHELP_COMPONENTS_WEBLINKS_CATEGORY_EDIT="Components_Weblinks_Categories_Edit"
 JHELP_COMPONENTS_WEBLINKS_LINKS="Components_Weblinks_Links"
 JHELP_COMPONENTS_WEBLINKS_LINKS_EDIT="Components_Weblinks_Links_Edit"
 JHELP_CONTENT_ARTICLE_MANAGER="Content_Article_Manager"
