@@ -29,15 +29,16 @@ class JButtonHelp extends JButton
 	 * @param	string	$ref		The name of the help screen (its key reference).
 	 * @param	boolean	$com		Use the help file in the component directory.
 	 * @param	string	$override	Use this URL instead of any other.
+	 * @param	string	$component	Name of component to get Help (null for current component)
 	 *
 	 * @return	string
 	 * @since	1.5
 	 */
-	public function fetchButton($type = 'Help', $ref = '', $com = false, $override = null)
+	public function fetchButton($type = 'Help', $ref = '', $com = false, $override = null, $component = null)
 	{
 		$text	= JText::_('JTOOLBAR_HELP');
 		$class	= $this->fetchIconClass('help');
-		$doTask	= $this->_getCommand($ref, $com, $override);
+		$doTask	= $this->_getCommand($ref, $com, $override, $component);
 
 		$html = "<a href=\"#\" onclick=\"$doTask\" rel=\"help\" class=\"toolbar\">\n";
 		$html .= "<span class=\"$class\">\n";
@@ -69,15 +70,16 @@ class JButtonHelp extends JButton
 	 * @param	string	$ref		The name of the help screen (its key reference).
 	 * @param	boolean	$com		Use the help file in the component directory.
 	 * @param	string	$override	Use this URL instead of any other.
+	 * @param	string	$component	Name of component to get Help (null for current component)
 	 *
 	 * @return	string	JavaScript command string
 	 * @since	1.5
 	 */
-	protected function _getCommand($ref, $com, $override)
+	protected function _getCommand($ref, $com, $override, $component)
 	{
 		// Get Help URL
 		jimport('joomla.language.help');
-		$url = JHelp::createURL($ref, $com, $override);
+		$url = JHelp::createURL($ref, $com, $override, $component);
 		$url = htmlspecialchars($url, ENT_QUOTES);
 		$cmd = "popupWindow('$url', '".JText::_('JHELP', true)."', 700, 500, 1)";
 
